--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     volumes:
       - ./backend/db:/app/db
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8080/health/"]
+      test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
       interval: 5s
       timeout: 5s
       retries: 3
