--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -1,24 +1,12 @@
 services:
-#  backend:
-#    build: backend-new
-#    ports:
-#      - "8080:8080"
-#    volumes:
-#      - ./backend/db:/app/db
-#    healthcheck:
-#      test: ["CMD", "curl", "-f", "http://localhost:8080/health/"]
-#      interval: 5s
-#      timeout: 5s
-#      retries: 3
-
   backend:
-    build: backend-new
+    build: backend
     ports:
       - "8080:8080"
     volumes:
-      - ./backend-new/db:/db
+      - ./backend/db:/app/db
     healthcheck:
-      test: [ "CMD", "curl", "-f", "http://localhost:8080/health/" ]
+      test: ["CMD", "curl", "-f", "http://localhost:8080/health/"]
       interval: 5s
       timeout: 5s
       retries: 3
@@ -34,7 +22,7 @@ services:
       retries: 3
 
   frontend:
-    build: frontend-new
+    build: frontend
     depends_on:
       backend:
         condition: service_healthy
