--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -21,6 +21,16 @@ services:
       timeout: 5s
       retries: 3
 
+  pedestrian-prediction:
+    build: pedestrian-prediction
+    ports:
+      - "8082:8080"
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:8080/health" ]
+      interval: 5s
+      timeout: 5s
+      retries: 3
+
   frontend:
     build: frontend
     depends_on:
