--- a/deploy/frontend/default.conf
+++ b/deploy/frontend/default.conf
@@ -11,14 +11,26 @@ server {
         try_files $uri =404;
     }
 
-        # REVERSE PROXY PER IL BACKEND
-    location /api/ {
-        proxy_pass http://backend:8080/api/;
+    # REVERSE PROXY PER IL BACKEND
+    location /mappa/ {
+        proxy_pass http://backend:8080/mappa/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
+
+    location /linee/ {
+        proxy_pass http://backend:8080/linee/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
+
+    location /parcheggi/ {
+        proxy_pass http://backend:8080/parcheggi/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
 
     location / {
-        try_files $uri $uri/ /login.html;
+        try_files $uri $uri/ /map.html;
     }
 }
