--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -1,10 +1,10 @@
 services:
   backend:
-    build: backend
+    build: backend-new
     ports:
       - "8080:8080"
     volumes:
-      - ./backend/db:/app/db
+      - ./backend-new/db:/db
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
       interval: 5s
