--- a/deploy/frontend/default.conf
+++ b/deploy/frontend/default.conf
@@ -5,17 +5,32 @@ server {
     root /usr/share/nginx/html;
     index login.html;
 
-    # STATIC FILES
-    location /static/ {
-        alias /usr/share/nginx/html/static/;
+    # Serve TUTTI gli HTML
+    location ~ \.html$ {
+        try_files $uri =404;
+    }
+
+    # Serve le risorse statiche (css/js/images)
+    location /assets/ {
+        try_files $uri =404;
+    }
+    location /images/ {
         try_files $uri =404;
     }
 
     # REVERSE PROXY PER IL BACKEND
+    location = /mappa {
+    return 308 /mappa/;
+    }
+
     location /mappa/ {
         proxy_pass http://backend:8080/mappa/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
+    }
+
+    location = /linee {
+    return 308 /linee/;
     }
 
     location /linee/ {
@@ -24,13 +39,27 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
     }
 
+    location = /parcheggi {
+    return 308 /parcheggi/;
+    }
+
     location /parcheggi/ {
         proxy_pass http://backend:8080/parcheggi/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
 
+    location = /simulazioni {
+        return 308 /simulazioni/;
+    }
+
+    location /simulazioni/ {
+        proxy_pass http://backend:8080/simulazioni/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
+
     location / {
-        try_files $uri $uri/ /map.html;
+        try_files $uri /map.html;
     }
 }
